--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dompurify": "^1.0.8",
     "hoek": "^5.0.3",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
