--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "dompurify": "^1.0.8",
+    "eslint-config-standard-react": "^7.0.2",
     "hoek": "^5.0.3",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
@@ -23,6 +24,12 @@
   },
   "devDependencies": {
     "axios": "^0.18.0",
+    "eslint": "^5.12.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1"
   }
